[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/beat_keeper.gd" type="Script" id=1]
[ext_resource path="res://assets/art/pronounced_1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/pronounced_2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/regular_2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/base.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/regular_wah.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/art/pronounced_0.png" type="Texture" id=7]
[ext_resource path="res://assets/art/regular_1.png" type="Texture" id=8]
[ext_resource path="res://assets/art/regular_0.png" type="Texture" id=9]
[ext_resource path="res://scripts/beat_display.gd" type="Script" id=10]
[ext_resource path="res://assets/sounds/pronounced_wah.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 7 ) ],
"loop": false,
"name": "pronounced",
"speed": 30.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": false,
"name": "regular",
"speed": 30.0
} ]

[node name="BeatKeeper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
pronounced_beats = true

[node name="PronouncedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -12.0
pitch_scale = 1.5
bus = "Beats"

[node name="RegularSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
pitch_scale = 1.5
bus = "Beats"

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="BeatDisplay" type="AnimatedSprite" parent="Control"]
position = Vector2( 0, -5 )
frames = SubResource( 1 )
centered = false
script = ExtResource( 10 )

[connection signal="animation_finished" from="Control/BeatDisplay" to="Control/BeatDisplay" method="_on_animation_finished"]
